--- a/texprt/prt.tex
+++ b/texprt/prt.tex
@@ -5,7 +5,7 @@
 %==========================================================================
 \documentclass[a4j,titlepage]{jarticle}
 \usepackage{programing_report}
-
+\usepackage{itembkbx}
 \begin{document}
 
 %--------------------
@@ -13,13 +13,13 @@
 %--------------------
 
 %%\title{レポートタイトル}を記述する．
-\title{第4回 プログラミング演習 レポート}
+\title{第８回 プログラミング演習 レポート}
 
 %%\author{クラス名}{学籍番号}{氏名}を記述する．
 \author{前半クラス16024003}{赤堀　冴太朗}
 
 %%\date{提出する年月日}を記述する．
-\date{2016 年 11 月10 日}
+\date{2016 年 １２ 月８ 日}
 \maketitle
 
 %--------------------
@@ -28,48 +28,21 @@
 
 \section{}
 \subsection{ソースコード}
-\begin{itembox}[l]{ソースコード}
+\begin{breakitembox}[l]{ソースコード}
 \begin{verbatim}
+
 /*****
 name 
 do 
 in 
 out 
 author 16024003
-day 
-other 
+day 2016.12.7
+other none
 *****/
 
 \end{verbatim}
-\end{itembox}
-
-\subsection{実行結果}
-\begin{itembox}[l]{実行結果}
-\begin{verbatim}
-
-\end{verbatim}
-\end{itembox}
-
-\subsection{考察}
-
-
-
-\section{}
-\subsection{ソースコード}
-\begin{itembox}[l]{ソースコード}
-\begin{verbatim}
-/*****
-name 
-do 
-in 
-out 　
-author 16024003
-day 
-other 
-*****/
-
-\end{verbatim}
-\end{itembox}
+\end{breakitembox}
 
 \subsection{実行結果}
 \begin{itembox}[l]{実行結果}
@@ -83,35 +56,9 @@ other
 
 \section{}
 \subsection{ソースコード}
-\begin{itembox}[l]{ソースコード}
-\begin{verbatim}
-/*****
-name 
-do 
-in 
-out 
-author 16024003
-day 
-other 
-*****/
-
-\end{verbatim}
-\end{itembox}
-
-\subsection{実行結果}
-\begin{itembox}[l]{実行結果}
+\begin{breakitembox}[l]{ソースコード}
 \begin{verbatim}
 
-\end{verbatim}
-\end{itembox}
-
-\subsection{考察}
-
-
-\section{}
-\subsection{ソースコード}
-\begin{itembox}[l]{ソースコード}
-\begin{verbatim}
 /*****
 name 
 do 
@@ -123,7 +70,34 @@ other none
 *****/
 
 \end{verbatim}
+\end{breakitembox}
+
+\subsection{実行結果}
+\begin{itembox}[l]{実行結果}
+\begin{verbatim}
+
+\end{verbatim}
 \end{itembox}
+
+\subsection{考察}
+
+\section{}
+\subsection{ソースコード}
+\begin{breakitembox}[l]{ソースコード}
+\begin{verbatim}
+
+/*****
+name 
+do 
+in 
+out 
+author 16024003
+day 2016.12.7
+other none
+*****/
+
+\end{verbatim}
+\end{breakitembox}
 
 \subsection{実行結果}
 \begin{itembox}[l]{実行結果}
