--- a/texprt/2017.1.26.tex
+++ b/texprt/2017.1.26.tex
@@ -26,7 +26,7 @@
 %以下から本文を開始する．
 %--------------------
 
-\section{総合演習}
+\section{総合演習 lecture 8-1}
 \subsection{ソースコード}
 \begin{breakitembox}[l]{ソースコード}
 \begin{verbatim}
@@ -80,6 +80,7 @@ void test(void)
 \subsection{実行結果}
 \begin{itembox}[l]{実行結果}
 \begin{verbatim}
+これからmain内を作成
 
 \end{verbatim}
 \end{itembox}
